5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4010/executions/1712_2498.log
== TEST (2019-05-08 15:36:20) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	if(t>=a):
		print(t)
	
-- OUTPUT:
232342872.49132895
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:36:22) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	if(t>=a):
		print(t)
	
-- EXECUTION TIME:
0.109054
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
232342872.49132895
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
6499875162946.905
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
137622776.99562818
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:24) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	if(t>=a):
		print(t)
	
-- OUTPUT:
232342872.49132895
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:36:25) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	if(t>=a):
		print(t)
	
-- EXECUTION TIME:
0.141757
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
232342872.49132895
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
6499875162946.905
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
137622776.99562818
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:39) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	
	print(t)
	
-- OUTPUT:
1.0
2.355
4.191025
6.678838874999999
10.049826675624999
14.617515145471874
20.80673302211439
29.193123244964998
40.55668199692757
55.95430410583686
76.81808206340895
105.08850119591912
143.3949191204704
195.3001154082374
265.63165637816167
360.9308943924091
490.0613619017143
665.0331453768229
902.119911985595
1223.372480740481
1658.6697114033518
2248.497458951542
3047.7140568793393
4130.652547071505
5598.034201281889
7586.3363427369595
10280.48574440858
13931.058183673626
18877.583838877763
25580.12610167937
34662.07086777555
46968.10602583586
63642.78366500759
86236.97186608528
116852.09687854556
158335.59127042926
214545.72617143166
290710.4589622899
393913.6718939028
533754.0254162383
723237.704439003
979988.0895148491
1327884.8612926207
1799284.987051501
2438032.157454784
3303534.5733512323
4476290.34689092
6065374.420037196
8218583.339150401
11136181.424548794
15089526.830263615
20446309.855007198
27704750.853534754
37539938.40653959
50866617.540861145
68924267.76786685
93392383.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:36:41) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	
	print(t)
	
-- EXECUTION TIME:
0.170311
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1.0
2.355
4.191025
6.678838874999999
10.049826675624999
14.617515145471874
20.80673302211439
29.193123244964998
40.55668199692757
55.95430410583686
76.81808206340895
105.08850119591912
143.3949191204704
195.3001154082374
265.63165637816167
360.9308943924091
490.0613619017143
665.0331453768229
902.119911985595
1223.372480740481
1658.6697114033518
2248.497458951542
3047.7140568793393
4130.652547071505
5598.034201281889
7586.3363427369595
10280.48574440858
13931.058183673626
18877.583838877763
25580.12610167937
34662.07086777555
46968.10602583586
63642.78366500759
86236.97186608528
116852.09687854556
158335.59127042926
214545.72617143166
290710.4589622899
393913.6718939028
533754.0254162383
723237.704439003
979988.0895148491
1327884.8612926207
1799284.987051501
2438032.157454784
3303534.5733512323
4476290.34689092
6065374.420037196
8218583.339150401
11136181.424548794
15089526.830263615
20446309.855007198
27704750.853534754
37539938.40653959
50866617.540861145
68924267.76786685
93392383.8
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1.0
2.1025
3.31800625
4.658101890625
6.135557334414062
7.7644519611915035
9.560308287213633
11.540239886653032
13.723114475034967
16.12973370872605
18.78303141387047
21.708292133792195
24.933392077505896
28.48906476545025
32.4091939039089
36.73113627905956
41.496077747663165
46.74942571679864
52.5412418527705
58.926719142679474
65.96670785480411
73.72829540992153
82.28544568943849
91.71970387260593
102.12097351954804
113.58837330530172
126.23118156909514
140.1698776799274
155.53729014211996
172.47986238168724
191.1590482758102
211.75285072408073
234.457517923299
259.48941351043715
287.087078395257
317.5135039307708
351.0586380836748
388.04214848725144
428.8164687071947
473.77015674968214
523.3315978165245
577.9730865927183
638.215327968472
704.6323990852404
777.8572199914776
858.587585040604
947.592812507266
1045.7210757892608
1153.90748605766
1273.1830033785702
1404.6842612248736
1549.664398000423
1709.5049987954665
1885.7292611720018
2080.016510442132
2294.218202762451
2530.375568545
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1.0
2.1275
3.39875625
4.832097671875
6.448190125039063
8.270334365981544
10.32480199764419
12.641214252343824
15.252969069517661
18.197722625881163
21.51793226068101
25.26146862391784
29.482305873467364
34.24129987233445
39.60706560605709
45.656966470829374
52.47822969586012
60.16920398208229
68.84077748979777
78.617976619747
89.64176863876474
102.07109414020725
116.08515864308367
131.88601637007685
149.70148345726165
169.7884225980625
192.4364464793155
217.9720934054282
246.7635353146203
279.2258860672344
315.8271865408068
357.0951528247597
403.62478480991655
456.0869448731809
515.2380303445115
581.9308792134367
657.1270663131498
741.9107672680765
837.5043900947562
945.2861998318376
1066.8101903103968
1203.8284895749725
1358.3166219957816
1532.5019913002438
1728.895995191025
1950.3302345778807
2199.9973394865606
2481.497000271097
2798.8878678056617
3156.7460709508837
3560.2311949971213
4015.160672359254
4528.093658085059
5106.4255994909045
5758.4948634259945
6493.702958512808
7322.650
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:36:46) 
-- CODE:
t=int(input("habitantes:"))
a=int(input("habitantes:"))
pt=float(input("percetual:"))
pa=float(input("percentual:"))
t=0
while(t<a):
	d=(t*pt)/100
	t=t+d
	h=(a*pa)/100
	a=a+h
	t=t+1
	if(t>=a):
	print(t)
	
-- EXECUTION TIME:
0.144939
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 13
    print(t)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
